test/classes/errors/nilability-init-var/init-var-nonnil-shared-from-nonnil-shared.chpl
//  lhs: shared!  rhs: shared!  ok

class MyClass {
  var x: int;
}

var rhs = new shared MyClass();

var lhs: shared MyClass = rhs;


